--- a/Mapbox-gl-js-bm.html
+++ b/Mapbox-gl-js-bm.html
@@ -35,7 +35,7 @@
 
     <script>
     // Set your Mapbox access token
-    mapboxgl.accessToken = 'pk.eyJ1IjoibHVrZTg1NDIiLCJhIjoiY2s4cnE5bnRrMGhpajNtcG00b3lreXlycyJ9.AcYo0A3SUOqMDzGmF83huQ’;
+    mapboxgl.accessToken = "pk.eyJ1IjoibHVrZTg1NDIiLCJhIjoiY2s4cnE5bnRrMGhpajNtcG00b3lreXlycyJ9.AcYo0A3SUOqMDzGmF83huQ"
 
     /* The map variable stores a new mapbox gl map.
     * map's center set to [-122.467, 37.798] with zoom 13. 
