--- a/Mapbox-gl-js-cwm.html
+++ b/Mapbox-gl-js-cwm.html
@@ -42,7 +42,7 @@
  <div id="mapId"></div>
     <script>
         // Mapbox GL JS requires a token
-        mapboxgl.accessToken = 'pk.eyJ1IjoibHVrZTg1NDIiLCJhIjoiY2s4cnE5bnRrMGhpajNtcG00b3lreXlycyJ9.AcYo0A3SUOqMDzGmF83huQ’;
+        mapboxgl.accessToken = "pk.eyJ1IjoibHVrZTg1NDIiLCJhIjoiY2s4cnE5bnRrMGhpajNtcG00b3lreXlycyJ9.AcYo0A3SUOqMDzGmF83huQ"
 var map = new mapboxgl.Map({
 container: 'mapId', 
 style: 'mapbox://styles/mapbox/streets-v11', 
